--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "TripTapToe",
-    "name": "TripTapToe",
+    "short_name": "AioFmes",
+    "name": "AioFmes",
     "icons": [
         {
             "src": "logo/android-launchericon-48-48.png",
