--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "dependencies": {
         "autoprefixer": "^10.2.1",
         "next": "^10.0.0",
+        "next-compose-plugins": "^2.2.1",
+        "next-images": "^1.7.0",
+        "next-pwa": "^5.0.5",
         "nprogress": "^0.2.0",
         "postcss": "^8.2.4",
         "react": "17.0.1",
